--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,7 @@
         <module>JDKRuntime</module>
         <module>LDAP</module>
         <module>SparkCase</module>
+        <module>SparkStreaming</module>
+        <module>SparkStructuredStreaming</module>
     </modules>
 </project>
