--- a/SparkCase/pom.xml
+++ b/SparkCase/pom.xml
@@ -21,19 +21,22 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
-            <version>3.1.0.3.1.5.0-152</version>
+            <!--<version>3.1.0.3.1.5.0-152</version>-->
+            <version>3.1.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-service-rpc</artifactId>
-            <version>3.1.0.3.1.5.0-152</version>
+            <!--<version>3.1.0.3.1.5.0-152</version>-->
+            <version>3.1.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-exec</artifactId>
-            <version>3.1.0.3.1.5.0-152</version>
+            <!--<version>3.1.0.3.1.5.0-152</version>-->
+            <version>3.1.0</version>
         </dependency>
 
         <dependency>
@@ -51,7 +54,8 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-service</artifactId>
-            <version>3.1.0.3.1.5.0-152</version>
+            <!--<version>3.1.0.3.1.5.0-152</version>-->
+            <version>3.1.0</version>
         </dependency>
 
         <dependency>
