--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <packaging>pom</packaging>
     <version>1.0</version>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>commons-lang</groupId>
@@ -44,9 +50,10 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+                <version>2.13.16</version>
                 <executions>
                     <execution>
                         <goals>
@@ -55,12 +62,12 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <scalaVersion>2.11.8</scalaVersion>
+                    <scalaVersion>2.12.15</scalaVersion>
                     <args>
                         <args>-target:jvm-1.8</args>
                     </args>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
     <modules>
